[gd_scene load_steps=11 format=3 uid="uid://c6lqmy357ej8o"]

[ext_resource type="Texture2D" uid="uid://bcj7o4xe5nkvq" path="res://assets/otros/fondo2dprueba.jpg" id="1_ter2f"]
[ext_resource type="FontFile" uid="uid://ck8r3pivnwx8j" path="res://assets/otros/Fuentes y mas/Cinzel/static/Cinzel-Bold.ttf" id="2_vhgtv"]
[ext_resource type="FontFile" uid="uid://06n02bnjutwl" path="res://assets/otros/Fuentes y mas/Cinzel/static/Cinzel-Medium.ttf" id="3_8cfpu"]
[ext_resource type="Script" uid="uid://cfy8bmrr4p5cg" path="res://assets/sprites/BotonesMenu.gd" id="3_w6fns"]
[ext_resource type="AudioStream" uid="uid://mymx8qwtk327" path="res://assets/musica/MusicaMenu-TheFatRat.ogg" id="5_w6fns"]

[sub_resource type="Theme" id="Theme_w6fns"]
default_font = ExtResource("2_vhgtv")
default_font_size = 22

[sub_resource type="Theme" id="Theme_pkvd8"]
default_font = ExtResource("3_8cfpu")

[sub_resource type="Theme" id="Theme_3r3h5"]
default_font = ExtResource("3_8cfpu")

[sub_resource type="Theme" id="Theme_bm2sk"]
default_font = ExtResource("3_8cfpu")

[sub_resource type="Theme" id="Theme_tnv86"]
default_font = ExtResource("3_8cfpu")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ter2f")
stretch_mode = 6

[node name="Overlay" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.313726)
self_modulate = Color(0, 0, 0, 0.196078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -124.0
offset_right = 200.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="titulo" type="Label" parent="MenuContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = SubResource("Theme_w6fns")
text = "BLACK POT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Espaciador" type="Control" parent="MenuContainer/VBoxContainer"]
layout_mode = 2

[node name="BottonsContainer" type="VBoxContainer" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
script = ExtResource("3_w6fns")

[node name="botonNuevaPartida" type="Button" parent="MenuContainer/VBoxContainer/BottonsContainer"]
layout_mode = 2
theme = SubResource("Theme_pkvd8")
text = "Nueva Partida"

[node name="botonContinuar" type="Button" parent="MenuContainer/VBoxContainer/BottonsContainer"]
layout_mode = 2
theme = SubResource("Theme_3r3h5")
text = "Continuar"

[node name="botonOpciones" type="Button" parent="MenuContainer/VBoxContainer/BottonsContainer"]
layout_mode = 2
theme = SubResource("Theme_bm2sk")
text = "Opciones"

[node name="botonSalir" type="Button" parent="MenuContainer/VBoxContainer/BottonsContainer"]
layout_mode = 2
theme = SubResource("Theme_tnv86")
text = "Salir"

[node name="MusicaMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_w6fns")
volume_db = 10.0
autoplay = true
parameters/looping = true

[connection signal="mouse_entered" from="MenuContainer/VBoxContainer/BottonsContainer" to="MenuContainer/VBoxContainer/BottonsContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MenuContainer/VBoxContainer/BottonsContainer" to="MenuContainer/VBoxContainer/BottonsContainer" method="_on_mouse_exited"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/BottonsContainer/botonSalir" to="MenuContainer/VBoxContainer/BottonsContainer" method="_on_boton_salir_pressed"]
